crates/fec-cli/src/commands/snapshots/libfec__commands__rss__tests__render_copy_menu.snap
---
source: crates/fec-cli/src/commands/rss.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"               ┌Copy (↑↓/Enter or 1-3)──────┐               "
"               │▶ 1) Filing ID: 1234567     │               "
"               │  2) Committee ID: C00401224│               "
"               │  3) RSS GUID: FEC-12345    │               "
"               │                            │               "
"               │                            │               "
"               └────────────────────────────┘               "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
