crates/fec-cli/src/commands/snapshots/libfec__commands__rss__tests__render_filings_table_empty.snap
---
source: crates/fec-cli/src/commands/rss.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Recent Filings (loading...)───────────────────────────────────────────────────────────────────────┐"
"│Committee                                   Form   Report               Filing ID  Age            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
