crates/fec-cli/src/commands/snapshots/libfec__commands__rss__tests__render_footer_normal.snap
---
source: crates/fec-cli/src/commands/rss.rs
expression: terminal.backend()
snapshot_kind: text
---
"────────────────────────────────────────────────────────────────────────────────"
"    Next refresh: 4:59  │  q quit  r refresh  ↑↓/gg/G nav  Enter open  y copy   "
"                    https://efilingapps.fec.gov/rss/generate                    "
"                                                                                "
